[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://Textures/Items/greenJewel.png" type="Texture" id=2]
[ext_resource path="res://Textures/Items/outlineJewel.png" type="Texture" id=3]
[ext_resource path="res://Textures/Items/outlineKey.png" type="Texture" id=4]
[ext_resource path="res://Textures/Items/keyGreen.png" type="Texture" id=5]
[ext_resource path="res://Textures/UI/transparentLight23.png" type="Texture" id=6]
[ext_resource path="res://Textures/UI/transparentLight34.png" type="Texture" id=7]
[ext_resource path="res://Textures/UI/transparentLight22.png" type="Texture" id=8]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PopupDialog" type="PopupDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -92.5
margin_right = 142.0
margin_bottom = 92.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PopupDialog"]
margin_left = 102.0
margin_top = 81.0
margin_right = 181.0
margin_bottom = 99.0
text = "Game Over"

[node name="PlayAgain" type="Button" parent="PopupDialog"]
margin_left = 67.0
margin_top = 111.0
margin_right = 144.0
margin_bottom = 131.0
text = "Play Again"

[node name="Quit" type="Button" parent="PopupDialog"]
margin_left = 179.0
margin_top = 110.0
margin_right = 219.0
margin_bottom = 130.0
text = "Quit"

[node name="Winner" type="PopupDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -81.0
margin_right = 124.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Winner"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -12.0
margin_right = 29.0
margin_bottom = 12.0
text = "You Won"

[node name="Play Again" type="Button" parent="Winner"]
margin_left = 48.0
margin_top = 108.0
margin_right = 125.0
margin_bottom = 128.0
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Winner"]
margin_left = 150.0
margin_top = 107.0
margin_right = 190.0
margin_bottom = 127.0
text = "Quit"

[node name="JewelOutline" type="Node2D" parent="."]

[node name="OutlineJewel" type="Sprite" parent="JewelOutline"]
position = Vector2( 34, 23 )
scale = Vector2( 1.03333, 0.892857 )
texture = ExtResource( 3 )

[node name="OutlineJewel2" type="Sprite" parent="JewelOutline"]
position = Vector2( 64, 23 )
texture = ExtResource( 3 )

[node name="OutlineJewel3" type="Sprite" parent="JewelOutline"]
position = Vector2( 94, 23 )
texture = ExtResource( 3 )

[node name="CollectedJewels" type="Node2D" parent="."]

[node name="GreenJewel" type="Sprite" parent="CollectedJewels"]
visible = false
position = Vector2( 34, 23 )
texture = ExtResource( 2 )

[node name="GreenJewel2" type="Sprite" parent="CollectedJewels"]
visible = false
position = Vector2( 64, 23 )
texture = ExtResource( 2 )

[node name="GreenJewel3" type="Sprite" parent="CollectedJewels"]
visible = false
position = Vector2( 94, 23 )
texture = ExtResource( 2 )

[node name="OutlineKey" type="Sprite" parent="."]
position = Vector2( 154, 22 )
texture = ExtResource( 4 )

[node name="KeyGreen" type="Sprite" parent="."]
visible = false
position = Vector2( 154, 23 )
texture = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 55.0
margin_right = 74.0
margin_bottom = 72.0
color = Color( 0.027451, 0.0235294, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="RichTextLabel" parent="."]
margin_left = 23.0
margin_top = 57.0
margin_right = 119.0
margin_bottom = 74.0
text = "Lives: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseScreen" type="PopupDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -42.0
margin_right = 96.0
margin_bottom = 57.0

[node name="RichTextLabel" type="RichTextLabel" parent="PauseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -9.0
margin_right = 29.0
margin_bottom = 9.0
text = "Paused
"

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( 47, 477 )
normal = ExtResource( 8 )
action = "Left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 150, 477 )
normal = ExtResource( 6 )
action = "Right"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="."]
position = Vector2( 828, 477 )
normal = ExtResource( 7 )
action = "Jump"
visibility_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[connection signal="pressed" from="PopupDialog/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="PopupDialog/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Winner/Play Again" to="." method="_on_Play_Again_pressed"]
[connection signal="pressed" from="Winner/Quit" to="." method="_on_Quit_pressed"]
